ejemplo padron y documentación swagger

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# ---> R
 # History files
 .Rhistory
 .Rapp.history
@@ -32,5 +33,6 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 
-# Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
-rsconnect/
+.Rproj.user
+
+**/**/datos/
